log/build_2025-05-07_20-12-22/ros2_viz_demo/stdout_stderr.log
running egg_info
creating build/ros2_viz_demo/ros2_viz_demo.egg-info
writing build/ros2_viz_demo/ros2_viz_demo.egg-info/PKG-INFO
writing dependency_links to build/ros2_viz_demo/ros2_viz_demo.egg-info/dependency_links.txt
writing entry points to build/ros2_viz_demo/ros2_viz_demo.egg-info/entry_points.txt
writing requirements to build/ros2_viz_demo/ros2_viz_demo.egg-info/requires.txt
writing top-level names to build/ros2_viz_demo/ros2_viz_demo.egg-info/top_level.txt
writing manifest file 'build/ros2_viz_demo/ros2_viz_demo.egg-info/SOURCES.txt'
reading manifest file 'build/ros2_viz_demo/ros2_viz_demo.egg-info/SOURCES.txt'
writing manifest file 'build/ros2_viz_demo/ros2_viz_demo.egg-info/SOURCES.txt'
running build
running build_py
creating /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build
creating /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib
creating /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/pose_arrow.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/marker_array.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/circular_point.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/__init__.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/pose_and_marker_array_publisher.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/moving_cube.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
copying ros2_viz_demo/curved_trail_node.py -> /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo
running install
running install_lib
creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/pose_arrow.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/marker_array.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/circular_point.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/__init__.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/pose_and_marker_array_publisher.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/moving_cube.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
copying /home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/build/lib/ros2_viz_demo/curved_trail_node.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/pose_arrow.py to pose_arrow.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/marker_array.py to marker_array.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/circular_point.py to circular_point.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/pose_and_marker_array_publisher.py to pose_and_marker_array_publisher.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/moving_cube.py to moving_cube.cpython-312.pyc
byte-compiling /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/curved_trail_node.py to curved_trail_node.cpython-312.pyc
running install_data
  File "/home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo/curved_trail_node.py", line 132
    trail.points =
                  ^
SyntaxError: invalid syntax

creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ament_index
creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ament_index/resource_index
creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ament_index/resource_index/packages
copying resource/ros2_viz_demo -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ament_index/resource_index/packages
copying package.xml -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ros2_viz_demo
creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ros2_viz_demo/launch
copying launch/display_urdf.launch.py -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ros2_viz_demo/launch
creating /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ros2_viz_demo/urdf
copying urdf/robot.urdf -> /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/share/ros2_viz_demo/urdf
running install_egg_info
Copying build/ros2_viz_demo/ros2_viz_demo.egg-info to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/python3.12/site-packages/ros2_viz_demo-0.0.0-py3.12.egg-info
running install_scripts
Installing circular_point script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing curved_trail_node script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing joint_state_publisher script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing marker_array script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing moving_cube script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing pose_and_marker_array_publisher script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
Installing pose_arrow script to /home/emin/ros2_ws/src/ros2_viz_demo/install/ros2_viz_demo/lib/ros2_viz_demo
writing list of installed files to '/home/emin/ros2_ws/src/ros2_viz_demo/build/ros2_viz_demo/install.log'
